--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,7 @@ baseURL = 'https://otipnavi.github.io'
 languageCode = 'en-us'
 title = 'Ivan'
 theme = 'hugo-theme-monochrome'
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
