--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,13 @@
 baseURL = 'https://otipnavi.github.io'
 languageCode = 'en-us'
 title = 'Ivan writes'
+favicon = 'false'
 theme = 'hugo-theme-monochrome'
 
 [caches]
   [caches.images]
     dir = ':cacheDir/images'
+
+[services]
+  [googleAnalytics]
+    id = 'G-S9930MH5BE'
