--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,7 @@ languageCode = 'en-us'
 title = 'Ivan writes'
 favicon = 'true'
 theme = 'hugo-theme-monochrome'
-
+cleanDestinationDir = 'true'
 [caches]
   [caches.images]
     dir = ':cacheDir/images'
